# legged_control

./: .gitignore  README.md
legged_controllers/config/b1/: reference.info  task.info
legged_controllers/src/: LeggedController.cpp
legged_examples/b1/b1_description/: CMakeLists.txt  package.xml
legged_examples/b1/b1_description/launch/: empty_world.launch
legged_examples/b1/b1_description/urdf/: b1.urdf  robot.xacro
legged_examples/b1/b1_description/urdf/b1/: const.xacro
legged_examples/b1/b1_description/urdf/common/: gazebo.xacro  imu.xacro  leg.xacro  transmission.xacro
legged_examples/b1/b1_hw/: CMakeLists.txt  package.xml
legged_examples/b1/b1_hw/launch/: legged_unitree_hw.launch
legged_examples/b1/b1_hw/src/: UnitreeHW.cpp
legged_examples/legged_unitree/legged_unitree_description/urdf/: robot.xacro
legged_examples/legged_unitree/legged_unitree_description/urdf/b1/: const.xacro
legged_examples/legged_unitree/legged_unitree_hw/: CMakeLists.txt
legged_examples/legged_unitree/legged_unitree_hw/config/: b1.yaml
legged_examples/legged_unitree/legged_unitree_hw/include/unitree_legged_sdk/: comm.h  quadruped.h
legged_examples/legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp
