<?xml version="1.0"?>
<package format="2">
    <name>b1_description</name>
    <version>0.0.0</version>
    <description>Unitree B1 robot description files</description>
    <maintainer email="bd1555@nyu.edu">Bolun Dai</maintainer>
    <license>BSD</license>
    <author email="bd1555@nyu.edu">Bolun Dai</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

</package>